Ticket #11494 (closed defect: fixed)

Opened 4 years ago

Last modified 3 years ago

FIX: GetPageInfo being called incorrectly on OSX

Reported by: SnowLeopard Owned by: csomor
Priority: normal Milestone:
Component: wxOSX-Cocoa Version: 2.9-svn
Keywords: OSX Printing Cc:
Blocked By: Patch: yes
Blocking:

Description

According to the documentation for wxPrintout::OnPreparePrinting:

Called once by the framework before any other demands are made of the wxPrintout object.
This gives the object an opportunity to calculate the number of pages in the document, for example.

On Windows this holds true, but on OSX (in wxMacPrinter::Print) wxPrintout::GetPageInfo is called *before* OnPreparePrinting. This contradicts the documentation and makes it so that if your printout object calculates the page range in OnPreparePrinting (as the documentation recommends), then the print operation will either fail or have unexpected behavior.

Attached patch moves the call to GetPageInfo *after* OnPreparePrinting is called (just like the similar Print function in "printwin.cpp"). Works fine with my custom printout object now.

Attachments

update.diff download (1.4 KB) - added by SnowLeopard 4 years ago.
patch file
wxOSX_print.patch download (2.2 KB) - added by Auria 3 years ago.
An updated version that applies cleanly on newer revisions of trunk

Change History

Changed 4 years ago by SnowLeopard

patch file

Changed 3 years ago by csomor

  • owner set to csomor
  • status changed from new to accepted

Changed 3 years ago by SC

  • status changed from accepted to closed
  • resolution set to fixed

(In [63182]) moving GetPageInfo to later stage, closes #11494

Changed 3 years ago by Auria

An updated version that applies cleanly on newer revisions of trunk

Changed 3 years ago by Auria

Sorry for the noise, I accidentally uploaded a patch to the wrong ticket =( please ignore

Note: See TracTickets for help on using tickets.